devops/solution/kubernetes/techtest-appdeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: getground-techtest-deployment
  namespace: getground-techtest
  labels:
    app: getground-techtest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: getground-techtest
  template:
    metadata:
      labels:
        app: getground-techtest
    spec:
      containers:
      - name: techtest
        image: watermellody/getground-techtest:v1.0.0
        ports:
        - containerPort: 443
