devops/solution/kubernetes/techtest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: getground-service
  namespace: getground-techtest
spec:
  ports:
  - name: http
    port: 80
    targetPort: 443
    protocol: TCP
  selector:
    app: getground-techtest
  type: LoadBalancer
