devops/solution/kubernetes/techtest-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: getground-ingress
  namespace: getground-techtest
  annotations:
    cloud.google.com/load-balancer-type: "External"
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
	  - path: /
	    backend:
	      serviceName: getground-service
	      servicePort: 80
